--- a/ABC/View/Base.lproj/Main.storyboard
+++ b/ABC/View/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,34 +25,38 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reusableCell" id="9y7-im-wQt">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bdZ-Yd-VF0">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBa-Ds-LkZ">
+                                <rect key="frame" x="10" y="54" width="394" height="798"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="touchLetterFullScreenImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPl-Ib-bKC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oRe-tA-ZsB" secondAttribute="trailing" constant="10" id="6sf-k2-L1R"/>
-                            <constraint firstAttribute="bottom" secondItem="oRe-tA-ZsB" secondAttribute="bottom" id="Uyn-xg-ujt"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="hC0-t1-s1z"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="iUd-0e-ML6"/>
+                            <constraint firstItem="BBa-Ds-LkZ" firstAttribute="trailing" secondItem="oRe-tA-ZsB" secondAttribute="trailing" id="2Se-ZV-VhY"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="INv-Mj-spG"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-44" id="MHR-ra-FYI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BBa-Ds-LkZ" secondAttribute="bottom" constant="10" id="UmB-yV-cmi"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vr4-L6-Rik"/>
+                            <constraint firstItem="BBa-Ds-LkZ" firstAttribute="leading" secondItem="oRe-tA-ZsB" secondAttribute="leading" id="cao-oC-Czc"/>
+                            <constraint firstItem="BBa-Ds-LkZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="ixo-NL-6O5"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="rjN-to-xLA"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="oRe-tA-ZsB" id="x7g-dG-a7C"/>
+                        <outlet property="letterFullScreenImageButton" destination="BBa-Ds-LkZ" id="mvr-15-4rf"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="69.642857142857139"/>
+            <point key="canvasLocation" x="-71.014492753623188" y="55.580357142857139"/>
         </scene>
     </scenes>
     <resources>
