--- a/ABC/View/Base.lproj/Main.storyboard
+++ b/ABC/View/Base.lproj/Main.storyboard
@@ -16,8 +16,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBa-Ds-LkZ">
+                                <rect key="frame" x="10" y="54" width="394" height="798"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="touchLetterFullScreenImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPl-Ib-bKC"/>
+                                </connections>
+                            </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-tA-ZsB">
-                                <rect key="frame" x="10" y="0.0" width="394" height="896"/>
+                                <rect key="frame" x="10" y="32" width="394" height="832"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6wE-N4-Osg">
                                     <size key="itemSize" width="128" height="128"/>
@@ -27,21 +35,13 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBa-Ds-LkZ">
-                                <rect key="frame" x="10" y="54" width="394" height="798"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
-                                <connections>
-                                    <action selector="touchLetterFullScreenImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bPl-Ib-bKC"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BBa-Ds-LkZ" firstAttribute="trailing" secondItem="oRe-tA-ZsB" secondAttribute="trailing" id="2Se-ZV-VhY"/>
                             <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="INv-Mj-spG"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-44" id="MHR-ra-FYI"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="32" id="MHR-ra-FYI"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BBa-Ds-LkZ" secondAttribute="bottom" constant="10" id="UmB-yV-cmi"/>
                             <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vr4-L6-Rik"/>
                             <constraint firstItem="BBa-Ds-LkZ" firstAttribute="leading" secondItem="oRe-tA-ZsB" secondAttribute="leading" id="cao-oC-Czc"/>
