--- a/ABC/Cell/LetterCollectionViewCell.xib
+++ b/ABC/Cell/LetterCollectionViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +20,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="АВС" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3R3-uf-Qg8">
                         <rect key="frame" x="-52" y="8.5" width="308" height="165.5"/>
                         <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="136"/>
-                        <color key="textColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" name="Yellow"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -36,4 +37,9 @@
             <point key="canvasLocation" x="249.27536231884059" y="143.97321428571428"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="Yellow">
+            <color red="1" green="0.97254901960784312" blue="0.60392156862745094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
