--- a/ABC/View/Base.lproj/Main.storyboard
+++ b/ABC/View/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </connections>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="oRe-tA-ZsB">
-                                <rect key="frame" x="10" y="32" width="394" height="832"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6wE-N4-Osg">
                                     <size key="itemSize" width="128" height="128"/>
@@ -40,13 +40,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BBa-Ds-LkZ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-15" id="2Se-ZV-VhY"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="INv-Mj-spG"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="32" id="MHR-ra-FYI"/>
+                            <constraint firstAttribute="bottom" secondItem="oRe-tA-ZsB" secondAttribute="bottom" id="9le-5t-uq2"/>
+                            <constraint firstAttribute="trailing" secondItem="oRe-tA-ZsB" secondAttribute="trailing" id="Jh7-NF-C8Q"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KmX-sA-VLh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BBa-Ds-LkZ" secondAttribute="bottom" constant="10" id="UmB-yV-cmi"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Vr4-L6-Rik"/>
                             <constraint firstItem="BBa-Ds-LkZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="cao-oC-Czc"/>
                             <constraint firstItem="BBa-Ds-LkZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="ixo-NL-6O5"/>
-                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="rjN-to-xLA"/>
+                            <constraint firstItem="oRe-tA-ZsB" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="w6n-0B-hfg"/>
                         </constraints>
                     </view>
                     <connections>
