--- a/ABC/View/Base.lproj/Main.storyboard
+++ b/ABC/View/Base.lproj/Main.storyboard
@@ -33,6 +33,10 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
+                                <view key="backgroundView" contentMode="scaleToFill" id="liZ-Tg-vrz" userLabel="BackgroundVideoView">
+                                    <rect key="frame" x="0.0" y="-44" width="414" height="896"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </view>
                                 <cells/>
                             </collectionView>
                         </subviews>
