--- a/ABC/Base.lproj/LaunchScreen.storyboard
+++ b/ABC/Base.lproj/LaunchScreen.storyboard
@@ -16,27 +16,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bvv-dD-EC0">
-                                <rect key="frame" x="169.5" y="437.5" width="75" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="abc_launchScreen-ru" translatesAutoresizingMaskIntoConstraints="NO" id="nhJ-BJ-aiI">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Bvv-dD-EC0" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0bB-e0-5HR"/>
-                            <constraint firstItem="Bvv-dD-EC0" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="kF0-nC-VLE"/>
+                            <constraint firstItem="nhJ-BJ-aiI" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="3AP-9Y-3hu"/>
+                            <constraint firstItem="nhJ-BJ-aiI" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="6uO-uc-QNx"/>
+                            <constraint firstItem="nhJ-BJ-aiI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="GTi-33-MhA"/>
+                            <constraint firstItem="nhJ-BJ-aiI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="OLi-YX-ak0"/>
+                            <constraint firstAttribute="bottom" secondItem="nhJ-BJ-aiI" secondAttribute="bottom" id="PAX-jM-Cv7"/>
+                            <constraint firstAttribute="trailing" secondItem="nhJ-BJ-aiI" secondAttribute="trailing" id="b1k-E2-HYH"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
+        <image name="abc_launchScreen-ru" width="360" height="640"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
