--- a/ABC/Controller/Components/WordCard/WordCardView.xib
+++ b/ABC/Controller/Components/WordCard/WordCardView.xib
@@ -3,26 +3,67 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WordCardView" customModule="ABC" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="iN0-l3-epB" id="miV-pN-wgf"/>
+                <outlet property="letterLabel" destination="YJs-bV-WEN" id="01U-Ig-1kQ"/>
+                <outlet property="wordImage" destination="5nl-nh-8XX" id="ffl-um-gkd"/>
+                <outlet property="wordLabel" destination="dJw-sQ-rrT" id="s5b-7o-aL2"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="WordCardView" id="iN0-l3-epB" customClass="WordCardView" customModule="ABC" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="936"/>
+        <view contentMode="scaleToFill" restorationIdentifier="WordCardView" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="400"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="АПЕЛЬСИН" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="dJw-sQ-rrT" userLabel="Word Label">
+                    <rect key="frame" x="10" y="307" width="380" height="73"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="73" id="gaB-1d-y1d"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="55"/>
+                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apelsin" translatesAutoresizingMaskIntoConstraints="NO" id="5nl-nh-8XX" userLabel="Word Image">
+                    <rect key="frame" x="10" y="44" width="208" height="220"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="А" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YJs-bV-WEN" userLabel="Letter Label">
+                    <rect key="frame" x="226" y="86" width="154" height="136"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="154" id="MT0-kk-Vki"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="140"/>
+                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" name="Pink"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="5nl-nh-8XX" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="1vx-tg-iG8"/>
+                <constraint firstItem="5nl-nh-8XX" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="9zj-uU-zv0"/>
+                <constraint firstItem="5nl-nh-8XX" firstAttribute="centerY" secondItem="YJs-bV-WEN" secondAttribute="centerY" id="DCx-dQ-JaJ"/>
+                <constraint firstItem="YJs-bV-WEN" firstAttribute="leading" secondItem="5nl-nh-8XX" secondAttribute="trailing" constant="8" id="RGg-EG-T7X"/>
+                <constraint firstItem="5nl-nh-8XX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="Vec-Gd-Qq0"/>
+                <constraint firstItem="YJs-bV-WEN" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="Y8P-gt-Qs4"/>
+                <constraint firstItem="YJs-bV-WEN" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="42" id="bKz-Tm-nFa"/>
+                <constraint firstItem="dJw-sQ-rrT" firstAttribute="top" secondItem="5nl-nh-8XX" secondAttribute="bottom" constant="43" id="bOJ-ZN-t9f"/>
+                <constraint firstItem="5nl-nh-8XX" firstAttribute="leading" secondItem="dJw-sQ-rrT" secondAttribute="leading" id="irV-p8-czj"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="dJw-sQ-rrT" secondAttribute="bottom" constant="20" id="pBb-88-DH2"/>
+                <constraint firstItem="dJw-sQ-rrT" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="shc-MF-AJp"/>
+            </constraints>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="134.78260869565219" y="95.758928571428569"/>
         </view>
+        <tapGestureRecognizer id="lab-uZ-ql9"/>
     </objects>
     <resources>
-        <namedColor name="Pink">
-            <color red="1" green="0.54117647058823526" blue="0.68235294117647061" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="apelsin" width="416" height="416"/>
     </resources>
 </document>
